--- a/pom.xml
+++ b/pom.xml
@@ -5,9 +5,9 @@
     <modelVersion>4.0.0</modelVersion>
 
     <groupId>com.wechat.pay</groupId>
-    <version>1.0-SNAPSHOT</version>
     <artifactId>wx-pay-api-v3</artifactId>
-    <packaging>jar</packaging>
+    <packaging>pom</packaging>
+    <version>1.0-SNAPSHOT</version>
 
     <name>wx-pay-api-v3</name>
     <description>微信支付api V3 特约商户进件</description>
@@ -32,6 +32,7 @@
             <groupId>com.fasterxml.jackson.core</groupId>
             <artifactId>jackson-annotations</artifactId>
             <version>2.11.2</version>
+            <optional>true</optional>
         </dependency>
 
 
@@ -45,6 +46,7 @@
             <groupId>org.apache.commons</groupId>
             <artifactId>commons-lang3</artifactId>
             <version>3.10</version>
+            <optional>true</optional>
         </dependency>
 
         <dependency>
@@ -63,11 +65,13 @@
             <groupId>org.slf4j</groupId>
             <artifactId>slf4j-simple</artifactId>
             <version>1.7.30</version>
+            <optional>true</optional>
         </dependency>
         <dependency>
             <groupId>com.alibaba</groupId>
             <artifactId>fastjson</artifactId>
             <version>1.2.73</version>
+            <optional>true</optional>
         </dependency>
 
     </dependencies>
@@ -90,15 +94,37 @@
             <url>https://jitpack.io</url>
         </repository>
     </repositories>
+
+    <distributionManagement>
+        <repository>
+            <id>wjbrands</id>
+            <name>Internal Wjbrands</name>
+            <url>http://10.100.5.241:9999/nexus/content/repositories/wjbrands/</url>
+        </repository>
+        <snapshotRepository>
+            <id>Snapshots</id>
+            <name>Internal Snapshots</name>
+            <url>http://10.100.5.241:9999/nexus/content/repositories/snapshots/</url>
+        </snapshotRepository>
+    </distributionManagement>
     <build>
         <plugins>
             <plugin>
-                <groupId>org.springframework.boot</groupId>
-                <artifactId>spring-boot-maven-plugin</artifactId>
-                <version>2.2.9.RELEASE</version>
+                <artifactId>maven-source-plugin</artifactId>
+                <version>3.0.1</version>
+                <configuration>
+                    <attach>true</attach>
+                </configuration>
+                <executions>
+                    <execution>
+                        <phase>package</phase>
+                        <!-- 打包源码     -->
+                        <goals>
+                            <goal>jar</goal>
+                        </goals>
+                    </execution>
+                </executions>
             </plugin>
         </plugins>
     </build>
-
-
 </project>
