--- a/pom.xml
+++ b/pom.xml
@@ -73,6 +73,11 @@
             <version>1.2.73</version>
             <optional>true</optional>
         </dependency>
+        <dependency>
+            <groupId>com.squareup.okhttp3</groupId>
+            <artifactId>okhttp</artifactId>
+            <version>3.14.9</version>
+        </dependency>
 
     </dependencies>
 
